--- a/slides_c32.tex
+++ b/slides_c32.tex
@@ -7246,6 +7246,45 @@ pig feed1 feed2 feed3 feed4
 
 \end{frame}
 
+\begin{frame}[fragile]{Another way to do this:}
+\protect\hypertarget{another-way-to-do-this}{}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{pigs1 }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(feed1}\OperatorTok{:}\NormalTok{feed4, }\DataTypeTok{names_to =} \StringTok{"feed"}\NormalTok{, }
+               \DataTypeTok{values_to=}\StringTok{"weight"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 20 x 2
+##    feed  weight
+##    <chr>  <dbl>
+##  1 feed1   60.8
+##  2 feed2   68.7
+##  3 feed3   92.6
+##  4 feed4   87.9
+##  5 feed1   57  
+##  6 feed2   67.7
+##  7 feed3   92.1
+##  8 feed4   84.2
+##  9 feed1   65  
+## 10 feed2   74  
+## 11 feed3   90.2
+## 12 feed4   83.1
+## 13 feed1   58.6
+## 14 feed2   66.3
+## 15 feed3   96.5
+## 16 feed4   85.7
+## 17 feed1   61.7
+## 18 feed2   69.8
+## 19 feed3   99.1
+## 20 feed4   90.3
+\end{verbatim}
+
+\end{frame}
+
 \begin{frame}[fragile]{\ldots{}and finally, the analysis}
 \protect\hypertarget{and-finally-the-analysis}{}
 
@@ -7354,8 +7393,8 @@ conclusion is so clear that I am OK with this.
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-179-1.pdf}
-\caption{plot of chunk unnamed-chunk-179}
+\includegraphics{figure/unnamed-chunk-180-1.pdf}
+\caption{plot of chunk unnamed-chunk-180}
 \end{figure}
 
 \end{frame}
@@ -7450,16 +7489,26 @@ conclusion is so clear that I am OK with this.
 \end{Highlighting}
 \end{Shaded}
 
+or
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{tb }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(m04}\OperatorTok{:}\NormalTok{fu, }\DataTypeTok{names_to =} \StringTok{"genage"}\NormalTok{, }
+               \DataTypeTok{values_to =} \StringTok{"freq"}\NormalTok{, }\DataTypeTok{values_drop_na =}\NormalTok{ T) ->}\StringTok{ }\NormalTok{tb2}
+\end{Highlighting}
+\end{Shaded}
+
 \begin{itemize}
 \tightlist
 \item
-  what makes the columns-to-be-gathered different, then
+  columns to make longer
 \item
-  what makes them the same, then
+  column to contain the names
 \item
-  the columns to gather, then (optionally)
+  column to contain the values
 \item
-  get rid of the missing values.
+  (optional) drop missings in the values
 \end{itemize}
 
 \end{frame}
@@ -7477,16 +7526,16 @@ conclusion is so clear that I am OK with this.
 ## # A tibble: 35,750 x 4
 ##    iso2   year genage  freq
 ##    <chr> <dbl> <chr>  <dbl>
-##  1 AD     2005 m04        0
-##  2 AD     2006 m04        0
-##  3 AD     2008 m04        0
-##  4 AE     2006 m04        0
-##  5 AE     2007 m04        0
-##  6 AE     2008 m04        0
-##  7 AG     2007 m04        0
-##  8 AL     2005 m04        0
-##  9 AL     2006 m04        1
-## 10 AL     2007 m04        0
+##  1 AD     1996 m014       0
+##  2 AD     1996 m1524      0
+##  3 AD     1996 m2534      0
+##  4 AD     1996 m3544      4
+##  5 AD     1996 m4554      1
+##  6 AD     1996 m5564      0
+##  7 AD     1996 m65        0
+##  8 AD     1996 f014       0
+##  9 AD     1996 f1524      1
+## 10 AD     1996 f2534      1
 ## # … with 35,740 more rows
 \end{verbatim}
 
@@ -7537,16 +7586,16 @@ conclusion is so clear that I am OK with this.
 ## # A tibble: 35,750 x 5
 ##    iso2   year gender age    freq
 ##    <chr> <dbl> <chr>  <chr> <dbl>
-##  1 AD     2005 m      04        0
-##  2 AD     2006 m      04        0
-##  3 AD     2008 m      04        0
-##  4 AE     2006 m      04        0
-##  5 AE     2007 m      04        0
-##  6 AE     2008 m      04        0
-##  7 AG     2007 m      04        0
-##  8 AL     2005 m      04        0
-##  9 AL     2006 m      04        1
-## 10 AL     2007 m      04        0
+##  1 AD     1996 m      014       0
+##  2 AD     1996 m      1524      0
+##  3 AD     1996 m      2534      0
+##  4 AD     1996 m      3544      4
+##  5 AD     1996 m      4554      1
+##  6 AD     1996 m      5564      0
+##  7 AD     1996 m      65        0
+##  8 AD     1996 f      014       0
+##  9 AD     1996 f      1524      1
+## 10 AD     1996 f      2534      1
 ## # … with 35,740 more rows
 \end{verbatim}
 
@@ -7566,7 +7615,8 @@ conclusion is so clear that I am OK with this.
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{tb }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{gather}\NormalTok{(genage, freq, m04}\OperatorTok{:}\NormalTok{fu, }\DataTypeTok{na.rm =}\NormalTok{ T) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(m04}\OperatorTok{:}\NormalTok{fu, }\DataTypeTok{names_to =} \StringTok{"genage"}\NormalTok{, }
+               \DataTypeTok{values_to =} \StringTok{"freq"}\NormalTok{, }\DataTypeTok{values_drop_na =}\NormalTok{ T) }\OperatorTok{%>%}\StringTok{ }
 \StringTok{  }\KeywordTok{separate}\NormalTok{(genage, }\KeywordTok{c}\NormalTok{(}\StringTok{"gender"}\NormalTok{, }\StringTok{"age"}\NormalTok{), }\DecValTok{1}\NormalTok{) ->}\StringTok{ }\NormalTok{tb3}
 \end{Highlighting}
 \end{Shaded}
@@ -7589,15 +7639,14 @@ years)}
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{tb3 }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{group_by}\NormalTok{(year) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{summarize}\NormalTok{(}\DataTypeTok{cases =} \KeywordTok{sum}\NormalTok{(freq)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{filter}\NormalTok{(}\KeywordTok{between}\NormalTok{(year, }\DecValTok{1991}\NormalTok{, }\DecValTok{1998}\NormalTok{))}
+\StringTok{  }\KeywordTok{filter}\NormalTok{(}\KeywordTok{between}\NormalTok{(year, }\DecValTok{1991}\NormalTok{, }\DecValTok{1998}\NormalTok{)) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{count}\NormalTok{(year, }\DataTypeTok{wt=}\NormalTok{freq) }
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
 ## # A tibble: 8 x 2
-##    year  cases
+##    year      n
 ##   <dbl>  <dbl>
 ## 1  1991    544
 ## 2  1992    512
@@ -7617,12 +7666,119 @@ years)}
 
 \end{frame}
 
-\begin{frame}[fragile]{Some weather data}
-\protect\hypertarget{some-weather-data}{}
+\begin{frame}[fragile]{To find out what}
+\protect\hypertarget{to-find-out-what}{}
+
+\begin{itemize}
+\tightlist
+\item
+  try counting up total cases by country:
+\end{itemize}
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{my_url <-}\StringTok{ "http://www.utsc.utoronto.ca/~butler/c32/weather.csv"}
+\NormalTok{tb3 }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{count}\NormalTok{(iso2, }\DataTypeTok{wt=}\NormalTok{freq) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{arrange}\NormalTok{(}\KeywordTok{desc}\NormalTok{(n))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 213 x 2
+##    iso2        n
+##    <chr>   <dbl>
+##  1 CN    4065174
+##  2 IN    3966169
+##  3 ID    1129015
+##  4 ZA     900349
+##  5 BD     758008
+##  6 VN     709695
+##  7 CD     603095
+##  8 PH     490040
+##  9 BR     440609
+## 10 KE     431523
+## # … with 203 more rows
+\end{verbatim}
+
+\end{frame}
+
+\begin{frame}[fragile]{what years do I have for China?}
+\protect\hypertarget{what-years-do-i-have-for-china}{}
+
+China started recording in 1995, which is at least part of the problem:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{tb3 }\OperatorTok{%>%}\StringTok{ }\KeywordTok{filter}\NormalTok{(iso2}\OperatorTok{==}\StringTok{"CN"}\NormalTok{) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{count}\NormalTok{(year, }\DataTypeTok{wt=}\NormalTok{freq)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 14 x 2
+##     year      n
+##    <dbl>  <dbl>
+##  1  1995 131194
+##  2  1996 168270
+##  3  1997 195895
+##  4  1998 214404
+##  5  1999 212258
+##  6  2000 213766
+##  7  2001 212766
+##  8  2002 194972
+##  9  2003 267280
+## 10  2004 384886
+## 11  2005 472719
+## 12  2006 468291
+## 13  2007 465877
+## 14  2008 462596
+\end{verbatim}
+
+\end{frame}
+
+\begin{frame}[fragile]{first year of recording for each country?}
+\protect\hypertarget{first-year-of-recording-for-each-country}{}
+
+\begin{itemize}
+\tightlist
+\item
+  A lot of countries started recording in about 1995:
+\end{itemize}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{tb3 }\OperatorTok{%>%}\StringTok{ }\KeywordTok{group_by}\NormalTok{(iso2) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{summarize}\NormalTok{(}\DataTypeTok{first_year=}\KeywordTok{min}\NormalTok{(year)) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{arrange}\NormalTok{(first_year)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 213 x 2
+##    iso2  first_year
+##    <chr>      <dbl>
+##  1 CA          1980
+##  2 CK          1980
+##  3 FJ          1994
+##  4 MN          1994
+##  5 AL          1995
+##  6 AM          1995
+##  7 AO          1995
+##  8 AT          1995
+##  9 AZ          1995
+## 10 BA          1995
+## # … with 203 more rows
+\end{verbatim}
+
+\end{frame}
+
+\begin{frame}[fragile]{Some Toronto weather data}
+\protect\hypertarget{some-toronto-weather-data}{}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{my_url <-}\StringTok{ }
+\StringTok{  "http://ritsokiguess.site/STAC32/toronto_weather.csv"}
 \NormalTok{weather <-}\StringTok{ }\KeywordTok{read_csv}\NormalTok{(my_url)}
 \end{Highlighting}
 \end{Shaded}
@@ -7631,16 +7787,9 @@ years)}
 ## Parsed with column specification:
 ## cols(
 ##   .default = col_double(),
-##   id = col_character(),
-##   element = col_character(),
-##   d9 = col_logical(),
-##   d12 = col_logical(),
-##   d18 = col_logical(),
-##   d19 = col_logical(),
-##   d20 = col_logical(),
-##   d21 = col_logical(),
-##   d22 = col_logical(),
-##   d24 = col_logical()
+##   station = col_character(),
+##   Month = col_character(),
+##   element = col_character()
 ## )
 \end{verbatim}
 
@@ -7660,27 +7809,27 @@ years)}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 22 x 35
-##    id     year month element    d1    d2    d3    d4
-##    <chr> <dbl> <dbl> <chr>   <dbl> <dbl> <dbl> <dbl>
-##  1 MX17…  2010     1 tmax       NA  NA    NA      NA
-##  2 MX17…  2010     1 tmin       NA  NA    NA      NA
-##  3 MX17…  2010     2 tmax       NA  27.3  24.1    NA
-##  4 MX17…  2010     2 tmin       NA  14.4  14.4    NA
-##  5 MX17…  2010     3 tmax       NA  NA    NA      NA
-##  6 MX17…  2010     3 tmin       NA  NA    NA      NA
-##  7 MX17…  2010     4 tmax       NA  NA    NA      NA
-##  8 MX17…  2010     4 tmin       NA  NA    NA      NA
-##  9 MX17…  2010     5 tmax       NA  NA    NA      NA
-## 10 MX17…  2010     5 tmin       NA  NA    NA      NA
-## # … with 12 more rows, and 27 more variables:
-## #   d5 <dbl>, d6 <dbl>, d7 <dbl>, d8 <dbl>,
-## #   d9 <lgl>, d10 <dbl>, d11 <dbl>, d12 <lgl>,
-## #   d13 <dbl>, d14 <dbl>, d15 <dbl>, d16 <dbl>,
-## #   d17 <dbl>, d18 <lgl>, d19 <lgl>, d20 <lgl>,
-## #   d21 <lgl>, d22 <lgl>, d23 <dbl>, d24 <lgl>,
-## #   d25 <dbl>, d26 <dbl>, d27 <dbl>, d28 <dbl>,
-## #   d29 <dbl>, d30 <dbl>, d31 <dbl>
+## # A tibble: 24 x 35
+##    station  Year Month element   d01   d02   d03
+##    <chr>   <dbl> <chr> <chr>   <dbl> <dbl> <dbl>
+##  1 TORONT…  2018 01    tmax     -7.9  -7.1  -5.3
+##  2 TORONT…  2018 01    tmin    -18.6 -12.5 -11.2
+##  3 TORONT…  2018 02    tmax      5.6  -8.6   0.4
+##  4 TORONT…  2018 02    tmin     -8.9 -15    -9.7
+##  5 TORONT…  2018 03    tmax     NA    NA    NA  
+##  6 TORONT…  2018 03    tmin     NA    -0.5  NA  
+##  7 TORONT…  2018 04    tmax      4.5   6.5   5  
+##  8 TORONT…  2018 04    tmin     -2.6  -1.2   2.4
+##  9 TORONT…  2018 05    tmax     23.5  26.3  23  
+## 10 TORONT…  2018 05    tmin      8.5  14.4  11.4
+## # … with 14 more rows, and 28 more variables:
+## #   d04 <dbl>, d05 <dbl>, d06 <dbl>, d07 <dbl>,
+## #   d08 <dbl>, d09 <dbl>, d10 <dbl>, d11 <dbl>,
+## #   d12 <dbl>, d13 <dbl>, d14 <dbl>, d15 <dbl>,
+## #   d16 <dbl>, d17 <dbl>, d18 <dbl>, d19 <dbl>,
+## #   d20 <dbl>, d21 <dbl>, d22 <dbl>, d23 <dbl>,
+## #   d24 <dbl>, d25 <dbl>, d26 <dbl>, d27 <dbl>,
+## #   d28 <dbl>, d29 <dbl>, d30 <dbl>, d31 <dbl>
 \end{verbatim}
 
 \end{frame}
@@ -7690,18 +7839,20 @@ years)}
 
 \begin{itemize}
 \item
-  Daily weather records for a weather station in Mexico:
+  Daily weather records for ``Toronto City'' weather station in 2018:
 
   \begin{itemize}
   \tightlist
   \item
-    \emph{id}: identifier for this weather station (always same here)
+    \emph{station}: identifier for this weather station (always same
+    here)
   \item
-    \emph{year}, \emph{month}: obvious
+    \emph{Year}, \emph{Month}: obvious
   \item
     \emph{element}: whether temperature given was daily max or daily min
   \item
-    \emph{d1, d2},\ldots{}: day of the month from 1st to 31st.
+    \emph{d01, d02},\ldots{} \emph{d31}: day of the month from 1st to
+    31st.
   \end{itemize}
 \item
   Numbers in data frame all temperatures (for different days of the
@@ -7710,7 +7861,10 @@ years)}
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{weather }\OperatorTok{%>%}\StringTok{ }\KeywordTok{gather}\NormalTok{(day, temperature, d1}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{na.rm =}\NormalTok{ T) ->}\StringTok{ }\NormalTok{d}
+\NormalTok{weather }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(d01}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{names_to=}\StringTok{"day"}\NormalTok{, }
+               \DataTypeTok{values_to=}\StringTok{"temperature"}\NormalTok{, }
+               \DataTypeTok{values_drop_na =}\NormalTok{ T) ->}\StringTok{ }\NormalTok{d}
 \end{Highlighting}
 \end{Shaded}
 
@@ -7726,20 +7880,20 @@ years)}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 66 x 6
-##    id       year month element day   temperature
-##    <chr>   <dbl> <dbl> <chr>   <chr>       <dbl>
-##  1 MX17004  2010    12 tmax    d1           29.9
-##  2 MX17004  2010    12 tmin    d1           13.8
-##  3 MX17004  2010     2 tmax    d2           27.3
-##  4 MX17004  2010     2 tmin    d2           14.4
-##  5 MX17004  2010    11 tmax    d2           31.3
-##  6 MX17004  2010    11 tmin    d2           16.3
-##  7 MX17004  2010     2 tmax    d3           24.1
-##  8 MX17004  2010     2 tmin    d3           14.4
-##  9 MX17004  2010     7 tmax    d3           28.6
-## 10 MX17004  2010     7 tmin    d3           17.5
-## # … with 56 more rows
+## # A tibble: 703 x 6
+##    station      Year Month element day   temperature
+##    <chr>       <dbl> <chr> <chr>   <chr>       <dbl>
+##  1 TORONTO CI…  2018 01    tmax    d01          -7.9
+##  2 TORONTO CI…  2018 01    tmax    d02          -7.1
+##  3 TORONTO CI…  2018 01    tmax    d03          -5.3
+##  4 TORONTO CI…  2018 01    tmax    d04          -7.7
+##  5 TORONTO CI…  2018 01    tmax    d05         -14.7
+##  6 TORONTO CI…  2018 01    tmax    d06         -15.4
+##  7 TORONTO CI…  2018 01    tmax    d07          -1  
+##  8 TORONTO CI…  2018 01    tmax    d08           3  
+##  9 TORONTO CI…  2018 01    tmax    d09           1.6
+## 10 TORONTO CI…  2018 01    tmax    d10           5.9
+## # … with 693 more rows
 \end{verbatim}
 
 \end{frame}
@@ -7756,14 +7910,17 @@ years)}
   Distinct from eg. \texttt{m1524} in tuberculosis data, that contained
   levels of two different factors, handled by separate.
 \item
-  Untangling names of variables handled by \texttt{spread}:
+  Untangling names of variables handled by \texttt{pivot\_wider}:
 \end{itemize}
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{weather }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{gather}\NormalTok{(day, temperature, d1}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{na.rm =}\NormalTok{ T) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{spread}\NormalTok{(element, temperature) ->}\StringTok{ }\NormalTok{d}
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(d01}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{names_to=}\StringTok{"day"}\NormalTok{, }
+               \DataTypeTok{values_to=}\StringTok{"temperature"}\NormalTok{, }
+               \DataTypeTok{values_drop_na =}\NormalTok{ T) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{pivot_wider}\NormalTok{(}\DataTypeTok{names_from=}\NormalTok{element, }
+                \DataTypeTok{values_from=}\NormalTok{temperature) ->}\StringTok{ }\NormalTok{d}
 \end{Highlighting}
 \end{Shaded}
 
@@ -7779,20 +7936,20 @@ years)}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 33 x 6
-##    id       year month day    tmax  tmin
-##    <chr>   <dbl> <dbl> <chr> <dbl> <dbl>
-##  1 MX17004  2010     1 d30    27.8  14.5
-##  2 MX17004  2010     2 d11    29.7  13.4
-##  3 MX17004  2010     2 d2     27.3  14.4
-##  4 MX17004  2010     2 d23    29.9  10.7
-##  5 MX17004  2010     2 d3     24.1  14.4
-##  6 MX17004  2010     3 d10    34.5  16.8
-##  7 MX17004  2010     3 d16    31.1  17.6
-##  8 MX17004  2010     3 d5     32.1  14.2
-##  9 MX17004  2010     4 d27    36.3  16.7
-## 10 MX17004  2010     5 d27    33.2  18.2
-## # … with 23 more rows
+## # A tibble: 355 x 6
+##    station       Year Month day    tmax  tmin
+##    <chr>        <dbl> <chr> <chr> <dbl> <dbl>
+##  1 TORONTO CITY  2018 01    d01    -7.9 -18.6
+##  2 TORONTO CITY  2018 01    d02    -7.1 -12.5
+##  3 TORONTO CITY  2018 01    d03    -5.3 -11.2
+##  4 TORONTO CITY  2018 01    d04    -7.7 -19.7
+##  5 TORONTO CITY  2018 01    d05   -14.7 -20.6
+##  6 TORONTO CITY  2018 01    d06   -15.4 -22.3
+##  7 TORONTO CITY  2018 01    d07    -1   -17.5
+##  8 TORONTO CITY  2018 01    d08     3    -1.7
+##  9 TORONTO CITY  2018 01    d09     1.6  -0.6
+## 10 TORONTO CITY  2018 01    d10     5.9  -1.3
+## # … with 345 more rows
 \end{verbatim}
 
 \end{frame}
@@ -7808,23 +7965,27 @@ years)}
   \texttt{mutate} creates new columns from old (or assign back to change
   a variable).
 \item
-  Would like the numerical dates. \texttt{separate} works, but also
-  produces column named \texttt{d} whose value is always \texttt{d}.
-  Instead pull out number as below.
+  Would like numerical dates. \texttt{separate} works, or pull out
+  number as below.
 \item
-  \texttt{select} keeps columns (or drops, with minus). Station
-  \texttt{id} has no value to us:
+  \texttt{select} keeps columns (or drops, with minus). Station name has
+  no value to us:
 \end{itemize}
+
+\small
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{weather }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{gather}\NormalTok{(day, temperature, d1}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{na.rm =}\NormalTok{ T) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{spread}\NormalTok{(element, temperature) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{day =} \KeywordTok{parse_number}\NormalTok{(day)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\NormalTok{id) ->}\StringTok{ }\NormalTok{d}
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(d01}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{names_to=}\StringTok{"day"}\NormalTok{, }
+               \DataTypeTok{values_to=}\StringTok{"temperature"}\NormalTok{, }\DataTypeTok{values_drop_na =}\NormalTok{ T) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{pivot_wider}\NormalTok{(}\DataTypeTok{names_from=}\NormalTok{element, }\DataTypeTok{values_from=}\NormalTok{temperature) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{Day =} \KeywordTok{parse_number}\NormalTok{(day)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\NormalTok{station) ->}\StringTok{ }\NormalTok{d}
 \end{Highlighting}
 \end{Shaded}
+
+\normalsize
 
 \end{frame}
 
@@ -7838,20 +7999,20 @@ years)}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 33 x 5
-##     year month   day  tmax  tmin
-##    <dbl> <dbl> <dbl> <dbl> <dbl>
-##  1  2010     1    30  27.8  14.5
-##  2  2010     2    11  29.7  13.4
-##  3  2010     2     2  27.3  14.4
-##  4  2010     2    23  29.9  10.7
-##  5  2010     2     3  24.1  14.4
-##  6  2010     3    10  34.5  16.8
-##  7  2010     3    16  31.1  17.6
-##  8  2010     3     5  32.1  14.2
-##  9  2010     4    27  36.3  16.7
-## 10  2010     5    27  33.2  18.2
-## # … with 23 more rows
+## # A tibble: 355 x 6
+##     Year Month day    tmax  tmin   Day
+##    <dbl> <chr> <chr> <dbl> <dbl> <dbl>
+##  1  2018 01    d01    -7.9 -18.6     1
+##  2  2018 01    d02    -7.1 -12.5     2
+##  3  2018 01    d03    -5.3 -11.2     3
+##  4  2018 01    d04    -7.7 -19.7     4
+##  5  2018 01    d05   -14.7 -20.6     5
+##  6  2018 01    d06   -15.4 -22.3     6
+##  7  2018 01    d07    -1   -17.5     7
+##  8  2018 01    d08     3    -1.7     8
+##  9  2018 01    d09     1.6  -0.6     9
+## 10  2018 01    d10     5.9  -1.3    10
+## # … with 345 more rows
 \end{verbatim}
 
 \end{frame}
@@ -7864,21 +8025,24 @@ years)}
 \item
   Make year-month-day into proper date.
 \item
-  Keep only date, tmax, tmin:
+  Keep only date, tmax, tmin: \small
 \end{itemize}
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{weather }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{gather}\NormalTok{(day, temperature, d1}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{na.rm =}\NormalTok{ T) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{spread}\NormalTok{(element, temperature) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{day =} \KeywordTok{parse_number}\NormalTok{(day)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\NormalTok{id) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{unite}\NormalTok{(datestr, }\KeywordTok{c}\NormalTok{(year, month, day), }\DataTypeTok{sep =} \StringTok{"-"}\NormalTok{) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(d01}\OperatorTok{:}\NormalTok{d31, }\DataTypeTok{names_to=}\StringTok{"day"}\NormalTok{, }
+               \DataTypeTok{values_to=}\StringTok{"temperature"}\NormalTok{, }\DataTypeTok{values_drop_na =}\NormalTok{ T) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{pivot_wider}\NormalTok{(}\DataTypeTok{names_from=}\NormalTok{element, }\DataTypeTok{values_from=}\NormalTok{temperature) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{Day =} \KeywordTok{parse_number}\NormalTok{(day)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\NormalTok{station) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{unite}\NormalTok{(datestr, }\KeywordTok{c}\NormalTok{(Year, Month, Day), }\DataTypeTok{sep =} \StringTok{"-"}\NormalTok{) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{date =} \KeywordTok{as.Date}\NormalTok{(datestr)) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{select}\NormalTok{(}\KeywordTok{c}\NormalTok{(date, tmax, tmin)) ->}\StringTok{ }\NormalTok{weather_tidy}
 \end{Highlighting}
 \end{Shaded}
+
+\normalsize
 
 \end{frame}
 
@@ -7892,20 +8056,20 @@ years)}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 33 x 3
+## # A tibble: 355 x 3
 ##    date        tmax  tmin
 ##    <date>     <dbl> <dbl>
-##  1 2010-01-30  27.8  14.5
-##  2 2010-02-11  29.7  13.4
-##  3 2010-02-02  27.3  14.4
-##  4 2010-02-23  29.9  10.7
-##  5 2010-02-03  24.1  14.4
-##  6 2010-03-10  34.5  16.8
-##  7 2010-03-16  31.1  17.6
-##  8 2010-03-05  32.1  14.2
-##  9 2010-04-27  36.3  16.7
-## 10 2010-05-27  33.2  18.2
-## # … with 23 more rows
+##  1 2018-01-01  -7.9 -18.6
+##  2 2018-01-02  -7.1 -12.5
+##  3 2018-01-03  -5.3 -11.2
+##  4 2018-01-04  -7.7 -19.7
+##  5 2018-01-05 -14.7 -20.6
+##  6 2018-01-06 -15.4 -22.3
+##  7 2018-01-07  -1   -17.5
+##  8 2018-01-08   3    -1.7
+##  9 2018-01-09   1.6  -0.6
+## 10 2018-01-10   5.9  -1.3
+## # … with 345 more rows
 \end{verbatim}
 
 \end{frame}
@@ -7969,20 +8133,18 @@ to distinguish max and min on graph.
   Since we only need data frame for plot, we can do the column-creation
   and plot in a pipeline.
 \item
-  The temperature columns are actually text (see printout of
-  \texttt{weather\_tidy}), but for graph they need to be numbers.
-\item
   For a \texttt{ggplot} in a pipeline, the initial data frame is
   omitted, because it is whatever came out of the previous step.
 \item
-  To make those ``one column''s: \texttt{gather}. I save the graph to
-  show overleaf:
+  To make those ``one column''s: \texttt{pivot\_longer}. I save the
+  graph to show overleaf:
 \end{itemize}
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{weather_tidy }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{gather}\NormalTok{(maxmin, temperature, tmax}\OperatorTok{:}\NormalTok{tmin) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(tmax}\OperatorTok{:}\NormalTok{tmin, }\DataTypeTok{names_to=}\StringTok{"maxmin"}\NormalTok{, }
+               \DataTypeTok{values_to=}\StringTok{"temperature"}\NormalTok{) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{temperature =} \KeywordTok{as.numeric}\NormalTok{(temperature)) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{ggplot}\NormalTok{(}\KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ date, }\DataTypeTok{y =}\NormalTok{ temperature, }\DataTypeTok{colour =}\NormalTok{ maxmin)) }\OperatorTok{+}
 \StringTok{  }\KeywordTok{geom_line}\NormalTok{() ->}\StringTok{ }\NormalTok{g}
@@ -8002,8 +8164,8 @@ to distinguish max and min on graph.
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-201-1.pdf}
-\caption{plot of chunk unnamed-chunk-201}
+\includegraphics{figure/unnamed-chunk-206-1.pdf}
+\caption{plot of chunk unnamed-chunk-206}
 \end{figure}
 
 \end{frame}
@@ -8011,11 +8173,11 @@ to distinguish max and min on graph.
 \begin{frame}{Summary of tidying ``verbs''}
 \protect\hypertarget{summary-of-tidying-verbs}{}
 
-\begin{tabular}{lp{0.7\textwidth}}
+\begin{tabular}{lp{0.55\textwidth}}
     Verb & Purpose\\
     \hline
-    \texttt{gather}& Combine columns that measure same thing into one\\
-    \texttt{spread}& Take column that measures one thing under
+    \texttt{pivot\_longer} (\texttt{gather}) & Combine columns that measure same thing into one\\
+    \texttt{pivot\_wider} (\texttt{spread}) & Take column that measures one thing under
                      different conditions and put into multiple columns\\
     \texttt{separate} & Turn a column that encodes
                         several variables into
@@ -8025,8 +8187,9 @@ to distinguish max and min on graph.
     \hline
   \end{tabular}
 
-\texttt{gather} and \texttt{spread} are opposites; \texttt{separate} and
-\texttt{unite} are opposites.
+\texttt{pivot\_longer} (\textt{gather}) and \texttt{pivot\_wider}
+(\texttt{spread}) are opposites; \texttt{separate} and \texttt{unite}
+are opposites.
 
 \end{frame}
 
@@ -8851,16 +9014,16 @@ Recall the tuberculosis data set, tidied:
 ## # A tibble: 35,750 x 5
 ##    iso2   year gender age    freq
 ##    <chr> <dbl> <chr>  <chr> <dbl>
-##  1 AD     2005 m      04        0
-##  2 AD     2006 m      04        0
-##  3 AD     2008 m      04        0
-##  4 AE     2006 m      04        0
-##  5 AE     2007 m      04        0
-##  6 AE     2008 m      04        0
-##  7 AG     2007 m      04        0
-##  8 AL     2005 m      04        0
-##  9 AL     2006 m      04        1
-## 10 AL     2007 m      04        0
+##  1 AD     1996 m      014       0
+##  2 AD     1996 m      1524      0
+##  3 AD     1996 m      2534      0
+##  4 AD     1996 m      3544      4
+##  5 AD     1996 m      4554      1
+##  6 AD     1996 m      5564      0
+##  7 AD     1996 m      65        0
+##  8 AD     1996 f      014       0
+##  9 AD     1996 f      1524      1
+## 10 AD     1996 f      2534      1
 ## # … with 35,740 more rows
 \end{verbatim}
 
@@ -8937,18 +9100,18 @@ Matching a variable in one data frame to one in another is called a
 
 \begin{verbatim}
 ## # A tibble: 35,750 x 7
-##    iso2   year gender age    freq Code  Country     
-##    <chr> <dbl> <chr>  <chr> <dbl> <chr> <chr>       
-##  1 AD     2005 m      04        0 ad    Andorra     
-##  2 AD     2006 m      04        0 ad    Andorra     
-##  3 AD     2008 m      04        0 ad    Andorra     
-##  4 AE     2006 m      04        0 ae    United Arab…
-##  5 AE     2007 m      04        0 ae    United Arab…
-##  6 AE     2008 m      04        0 ae    United Arab…
-##  7 AG     2007 m      04        0 ag    Antigua and…
-##  8 AL     2005 m      04        0 al    Albania     
-##  9 AL     2006 m      04        1 al    Albania     
-## 10 AL     2007 m      04        0 al    Albania     
+##    iso2   year gender age    freq Code  Country
+##    <chr> <dbl> <chr>  <chr> <dbl> <chr> <chr>  
+##  1 AD     1996 m      014       0 ad    Andorra
+##  2 AD     1996 m      1524      0 ad    Andorra
+##  3 AD     1996 m      2534      0 ad    Andorra
+##  4 AD     1996 m      3544      4 ad    Andorra
+##  5 AD     1996 m      4554      1 ad    Andorra
+##  6 AD     1996 m      5564      0 ad    Andorra
+##  7 AD     1996 m      65        0 ad    Andorra
+##  8 AD     1996 f      014       0 ad    Andorra
+##  9 AD     1996 f      1524      1 ad    Andorra
+## 10 AD     1996 f      2534      1 ad    Andorra
 ## # … with 35,740 more rows
 \end{verbatim}
 
@@ -9051,11 +9214,11 @@ Matching a variable in one data frame to one in another is called a
 ## # A tibble: 6 x 1
 ##   iso2 
 ##   <chr>
-## 1 ME   
-## 2 PS   
-## 3 RS   
-## 4 CD   
-## 5 <NA> 
+## 1 CD   
+## 2 ME   
+## 3 <NA> 
+## 4 PS   
+## 5 RS   
 ## 6 TL
 \end{verbatim}
 
@@ -9202,8 +9365,8 @@ data}\label{case-study-1-the-windmill-data}}
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-237-1.pdf}
-\caption{plot of chunk unnamed-chunk-237}
+\includegraphics{figure/unnamed-chunk-242-1.pdf}
+\caption{plot of chunk unnamed-chunk-242}
 \end{figure}
 
 \end{frame}
@@ -9358,8 +9521,8 @@ showing the intercept and slope and their significance.
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-243-1.pdf}
-\caption{plot of chunk unnamed-chunk-243}
+\includegraphics{figure/unnamed-chunk-248-1.pdf}
+\caption{plot of chunk unnamed-chunk-248}
 \end{figure}
 
 \end{frame}
@@ -9499,8 +9662,8 @@ showing the intercept and slope and their significance.
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-247-1.pdf}
-\caption{plot of chunk unnamed-chunk-247}
+\includegraphics{figure/unnamed-chunk-252-1.pdf}
+\caption{plot of chunk unnamed-chunk-252}
 \end{figure}
 
 \end{frame}
@@ -9560,8 +9723,8 @@ showing the intercept and slope and their significance.
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-248-1.pdf}
-\caption{plot of chunk unnamed-chunk-248}
+\includegraphics{figure/unnamed-chunk-253-1.pdf}
+\caption{plot of chunk unnamed-chunk-253}
 \end{figure}
 
 Curve clearly fits better than line.
@@ -9656,8 +9819,8 @@ Pretty straight. Blue actually smooth curve not line:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-249-1.pdf}
-\caption{plot of chunk unnamed-chunk-249}
+\includegraphics{figure/unnamed-chunk-254-1.pdf}
+\caption{plot of chunk unnamed-chunk-254}
 \end{figure}
 
 \end{frame}
@@ -9822,8 +9985,8 @@ Pretty straight. Blue actually smooth curve not line:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-253-1.pdf}
-\caption{plot of chunk unnamed-chunk-253}
+\includegraphics{figure/unnamed-chunk-258-1.pdf}
+\caption{plot of chunk unnamed-chunk-258}
 \end{figure}
 
 \end{frame}
@@ -10152,8 +10315,8 @@ Pretty straight. Blue actually smooth curve not line:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-263-1.pdf}
-\caption{plot of chunk unnamed-chunk-263}
+\includegraphics{figure/unnamed-chunk-268-1.pdf}
+\caption{plot of chunk unnamed-chunk-268}
 \end{figure}
 
 \end{frame}
@@ -10419,8 +10582,8 @@ I saved this graph to plot later (on the next page).
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-270-1.pdf}
-\caption{plot of chunk unnamed-chunk-270}
+\includegraphics{figure/unnamed-chunk-275-1.pdf}
+\caption{plot of chunk unnamed-chunk-275}
 \end{figure}
 
 \end{frame}
@@ -10497,8 +10660,8 @@ from here on, eg.:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-272-1.pdf}
-\caption{plot of chunk unnamed-chunk-272}
+\includegraphics{figure/unnamed-chunk-277-1.pdf}
+\caption{plot of chunk unnamed-chunk-277}
 \end{figure}
 
 \end{frame}
@@ -10623,8 +10786,8 @@ from here on, eg.:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-275-1.pdf}
-\caption{plot of chunk unnamed-chunk-275}
+\includegraphics{figure/unnamed-chunk-280-1.pdf}
+\caption{plot of chunk unnamed-chunk-280}
 \end{figure}
 
 \end{frame}
@@ -10715,8 +10878,8 @@ from here on, eg.:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-279-1.pdf}
-\caption{plot of chunk unnamed-chunk-279}
+\includegraphics{figure/unnamed-chunk-284-1.pdf}
+\caption{plot of chunk unnamed-chunk-284}
 \end{figure}
 
 \end{frame}
@@ -10776,8 +10939,8 @@ From package \texttt{MASS}:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-280-1.pdf}
-\caption{plot of chunk unnamed-chunk-280}
+\includegraphics{figure/unnamed-chunk-285-1.pdf}
+\caption{plot of chunk unnamed-chunk-285}
 \end{figure}
 
 \end{frame}
@@ -10855,8 +11018,8 @@ From package \texttt{MASS}:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-283-1.pdf}
-\caption{plot of chunk unnamed-chunk-283}
+\includegraphics{figure/unnamed-chunk-288-1.pdf}
+\caption{plot of chunk unnamed-chunk-288}
 \end{figure}
 
 \end{frame}
@@ -11415,8 +11578,8 @@ Uses package \texttt{leaps}:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-305-1.pdf}
-\caption{plot of chunk unnamed-chunk-305}
+\includegraphics{figure/unnamed-chunk-310-1.pdf}
+\caption{plot of chunk unnamed-chunk-310}
 \end{figure}
 
 \end{frame}
@@ -11455,8 +11618,8 @@ Uses package \texttt{leaps}:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-307-1.pdf}
-\caption{plot of chunk unnamed-chunk-307}
+\includegraphics{figure/unnamed-chunk-312-1.pdf}
+\caption{plot of chunk unnamed-chunk-312}
 \end{figure}
 
 \end{frame}
@@ -11900,8 +12063,8 @@ Read the data:
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-318-1.pdf}
-\caption{plot of chunk unnamed-chunk-318}
+\includegraphics{figure/unnamed-chunk-323-1.pdf}
+\caption{plot of chunk unnamed-chunk-323}
 \end{figure}
 
 \end{frame}
@@ -14118,8 +14281,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-392-1.pdf}
-\caption{plot of chunk unnamed-chunk-392}
+\includegraphics{figure/unnamed-chunk-397-1.pdf}
+\caption{plot of chunk unnamed-chunk-397}
 \end{figure}
 
 \end{frame}
@@ -14173,8 +14336,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-394-1.pdf}
-\caption{plot of chunk unnamed-chunk-394}
+\includegraphics{figure/unnamed-chunk-399-1.pdf}
+\caption{plot of chunk unnamed-chunk-399}
 \end{figure}
 
 \end{frame}
@@ -14191,8 +14354,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-395-1.pdf}
-\caption{plot of chunk unnamed-chunk-395}
+\includegraphics{figure/unnamed-chunk-400-1.pdf}
+\caption{plot of chunk unnamed-chunk-400}
 \end{figure}
 
 \end{frame}
@@ -14209,8 +14372,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-396-1.pdf}
-\caption{plot of chunk unnamed-chunk-396}
+\includegraphics{figure/unnamed-chunk-401-1.pdf}
+\caption{plot of chunk unnamed-chunk-401}
 \end{figure}
 
 \end{frame}
@@ -14268,8 +14431,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-398-1.pdf}
-\caption{plot of chunk unnamed-chunk-398}
+\includegraphics{figure/unnamed-chunk-403-1.pdf}
+\caption{plot of chunk unnamed-chunk-403}
 \end{figure}
 
 \end{frame}
@@ -14311,8 +14474,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-400-1.pdf}
-\caption{plot of chunk unnamed-chunk-400}
+\includegraphics{figure/unnamed-chunk-405-1.pdf}
+\caption{plot of chunk unnamed-chunk-405}
 \end{figure}
 
 \end{frame}
@@ -14354,8 +14517,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-402-1.pdf}
-\caption{plot of chunk unnamed-chunk-402}
+\includegraphics{figure/unnamed-chunk-407-1.pdf}
+\caption{plot of chunk unnamed-chunk-407}
 \end{figure}
 
 \end{frame}
@@ -14386,8 +14549,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-403-1.pdf}
-\caption{plot of chunk unnamed-chunk-403}
+\includegraphics{figure/unnamed-chunk-408-1.pdf}
+\caption{plot of chunk unnamed-chunk-408}
 \end{figure}
 
 \end{frame}
@@ -14403,8 +14566,8 @@ rat5T12
 
 \begin{figure}
 \centering
-\includegraphics{figure/unnamed-chunk-404-1.pdf}
-\caption{plot of chunk unnamed-chunk-404}
+\includegraphics{figure/unnamed-chunk-409-1.pdf}
+\caption{plot of chunk unnamed-chunk-409}
 \end{figure}
 
 \end{frame}
