--- a/tidying_R.Rmd
+++ b/tidying_R.Rmd
@@ -66,6 +66,15 @@ combine.
 pigs2
 ```
 
+## Another way to do this:
+
+```{r}
+pigs1 %>% 
+  pivot_longer(feed1:feed4, names_to = "feed", 
+               values_to="weight")
+```
+
+
 ## ...and finally, the analysis
 - which is just what we saw before:
 ```{r}
@@ -138,10 +147,18 @@ glimpse(tb)
 tb %>% gather(genage, freq, m04:fu, na.rm = T) -> tb2
 ```
 
-- what makes the columns-to-be-gathered different, then
-- what makes them the same, then
-- the columns to gather, then (optionally)
-- get rid of the missing values.
+or
+
+```{r}
+tb %>% 
+  pivot_longer(m04:fu, names_to = "genage", 
+               values_to = "freq", values_drop_na = T) -> tb2
+```
+
+- columns to make longer
+- column to contain the names
+- column to contain the values
+- (optional) drop missings in the values
 
 ## Results (some)
 
@@ -174,7 +191,8 @@ a time, and when you have each step working, you use that step’s
 output as input to the next step, thus:
 ```{r}
 tb %>%
-  gather(genage, freq, m04:fu, na.rm = T) %>%
+  pivot_longer(m04:fu, names_to = "genage", 
+               values_to = "freq", values_drop_na = T) %>% 
   separate(genage, c("gender", "age"), 1) -> tb3
 ```
 
@@ -186,17 +204,47 @@ each line is incomplete, so that R knows more is to come.
 
 ```{r}
 tb3 %>%
-  group_by(year) %>%
-  summarize(cases = sum(freq)) %>%
-  filter(between(year, 1991, 1998))
+  filter(between(year, 1991, 1998)) %>% 
+  count(year, wt=freq) 
 ```
 
 - Something very interesting happened between 1994 and 1995.
 
-## Some weather data
+## To find out what
+
+- try counting up total cases by country:
 
 ```{r}
-my_url <- "http://www.utsc.utoronto.ca/~butler/c32/weather.csv"
+tb3 %>% 
+  count(iso2, wt=freq) %>% 
+  arrange(desc(n))
+```
+
+## what years do I have for China?
+
+China started recording in 1995, which is at least part of the problem:
+
+```{r}
+tb3 %>% filter(iso2=="CN") %>% 
+  count(year, wt=freq)
+```
+
+## first year of recording for each country?
+
+- A lot of countries started recording in about 1995:
+
+```{r}
+tb3 %>% group_by(iso2) %>% 
+  summarize(first_year=min(year)) %>% 
+  arrange(first_year)
+```
+
+
+## Some Toronto weather data
+
+```{r}
+my_url <- 
+  "http://ritsokiguess.site/STAC32/toronto_weather.csv"
 weather <- read_csv(my_url)
 ```
 
@@ -208,18 +256,21 @@ weather
 
 ## The columns
 
-- Daily weather records for a weather station in Mexico:
+- Daily weather records for "Toronto City" weather station in 2018:
 
-  - *id*: identifier for this weather station (always same here)
-  - *year*, *month*: obvious 
+  - *station*: identifier for this weather station (always same here)
+  - *Year*, *Month*: obvious 
   - *element*: whether temperature given was daily max or daily min
-  - *d1, d2*,...: day of the month from 1st to 31st.
+  - *d01, d02*,... *d31*: day of the month from 1st to 31st.
 
 - Numbers in data frame all temperatures (for different days of the month),
 so first step is
 
 ```{r}
-weather %>% gather(day, temperature, d1:d31, na.rm = T) -> d
+weather %>% 
+  pivot_longer(d01:d31, names_to="day", 
+               values_to="temperature", 
+               values_drop_na = T) -> d
 ```
 
 ## So far
@@ -233,12 +284,15 @@ d
 should each be in separate column.
 - Distinct from eg. `m1524` in tuberculosis data, that contained levels of
 two different factors, handled by separate.
-- Untangling names of variables handled by `spread`:
+- Untangling names of variables handled by `pivot_wider`:
 
 ```{r}
 weather %>%
-  gather(day, temperature, d1:d31, na.rm = T) %>%
-  spread(element, temperature) -> d
+  pivot_longer(d01:d31, names_to="day", 
+               values_to="temperature", 
+               values_drop_na = T) %>% 
+  pivot_wider(names_from=element, 
+                values_from=temperature) -> d
 ```
 
 ## So far
@@ -251,20 +305,21 @@ d
 - We have tidy data now, but can improve things further.
 - `mutate` creates new columns from old (or assign back to change a
 variable).
-- Would like the numerical dates. `separate` works, but also produces
-column named `d` whose value is always `d`. Instead pull out number as
+- Would like numerical dates. `separate` works, or pull out number as
 below.
-- `select` keeps columns (or drops, with minus). Station `id` has no
+- `select` keeps columns (or drops, with minus). Station name has no
 value to us:
 
+\small
 ```{r}
 weather %>%
-  gather(day, temperature, d1:d31, na.rm = T) %>%
-  spread(element, temperature) %>%
-  mutate(day = parse_number(day)) %>%
-  select(-id) -> d
+  pivot_longer(d01:d31, names_to="day", 
+               values_to="temperature", values_drop_na = T) %>% 
+  pivot_wider(names_from=element, values_from=temperature) %>% 
+  mutate(Day = parse_number(day)) %>%
+  select(-station) -> d
 ```
-
+\normalsize
 ## So far
 
 ```{r}
@@ -274,16 +329,19 @@ d
 ## Final step(s)
 - Make year-month-day into proper date.
 - Keep only date, tmax, tmin:
+\small
 ```{r}
 weather %>%
-  gather(day, temperature, d1:d31, na.rm = T) %>%
-  spread(element, temperature) %>%
-  mutate(day = parse_number(day)) %>%
-  select(-id) %>%
-  unite(datestr, c(year, month, day), sep = "-") %>%
+  pivot_longer(d01:d31, names_to="day", 
+               values_to="temperature", values_drop_na = T) %>% 
+  pivot_wider(names_from=element, values_from=temperature) %>% 
+  mutate(Day = parse_number(day)) %>%
+  select(-station) %>% 
+  unite(datestr, c(Year, Month, Day), sep = "-") %>%
   mutate(date = as.Date(datestr)) %>%
   select(c(date, tmax, tmin)) -> weather_tidy
 ```
+\normalsize
 
 ## Our tidy data frame
 
@@ -322,14 +380,13 @@ to distinguish max and min on graph.
 ## Setting up plot
 - Since we only need data frame for plot, we can do the
 column-creation and plot in a pipeline.
-- The temperature columns are actually text (see printout of
-`weather_tidy`), but for graph they need to be numbers.
 - For a `ggplot` in a pipeline, the initial data frame is omitted, because it
 is whatever came out of the previous step.
-- To make those “one column”s: `gather`. I save the graph to show overleaf:
+- To make those “one column”s: `pivot_longer`. I save the graph to show overleaf:
 ```{r}
 weather_tidy %>%
-  gather(maxmin, temperature, tmax:tmin) %>%
+  pivot_longer(tmax:tmin, names_to="maxmin", 
+               values_to="temperature") %>%
   mutate(temperature = as.numeric(temperature)) %>%
   ggplot(aes(x = date, y = temperature, colour = maxmin)) +
   geom_line() -> g
@@ -343,11 +400,11 @@ g
 
 ## Summary of tidying “verbs”
 
-  \begin{tabular}{lp{0.7\textwidth}}
+  \begin{tabular}{lp{0.55\textwidth}}
     Verb & Purpose\\
     \hline
-    \texttt{gather}& Combine columns that measure same thing into one\\
-    \texttt{spread}& Take column that measures one thing under
+    \texttt{pivot\_longer} (\texttt{gather}) & Combine columns that measure same thing into one\\
+    \texttt{pivot\_wider} (\texttt{spread}) & Take column that measures one thing under
                      different conditions and put into multiple columns\\
     \texttt{separate} & Turn a column that encodes
                         several variables into
@@ -357,7 +414,7 @@ g
     \hline
   \end{tabular}
   
-  \texttt{gather} and \texttt{spread} are opposites; \texttt{separate}
+  \texttt{pivot\_longer} (\textt{gather}) and \texttt{pivot\_wider} (\texttt{spread}) are opposites; \texttt{separate}
   and \texttt{unite} are opposites.
 
 ## Doing things with data frames
